# rules_perl

./: WORKSPACE  def.bzl  repositories.bzl
examples/hello-world/: BUILD.bazel  hello.pl
examples/hello-world/lib/: Hello.pm
examples/hello-world/t/: basic.t
examples/some-other-package/: BUILD.bazel  important-data.txt
examples/some-other-package/lib/Something/: Important.pm
internal/: BUILD.bazel  common.bzl  image.bzl  providers.bzl  rules.bzl  runfiles.tmpl
internal/repositories/: images.bzl
repositories/: deps.bzl  docker_deps.bzl
tests/: BUILD.bazel  suite.bzl
tests/binary-deps/: test.bzl
tests/binary-multiple-packages/: test.bzl
tests/binary-simple/: test.bzl
tests/custom-lib-dir/: test.bzl
tests/libraries-with-data/: test.bzl
tests/library-custom-dir/: test.bzl
tests/library-data/: test.bzl
tests/library-multiple/: test.bzl
tests/library-single/: test.bzl
tests/multiple-libraries/: test.bzl
tests/single-library/: BUILD.bazel  test.bzl
